--- a/1_create_aws_resources.ipynb
+++ b/1_create_aws_resources.ipynb
@@ -5,7 +5,7 @@
    "id": "eac93db5-af70-4d6b-ac45-c3b863f6ca8a",
    "metadata": {},
    "source": [
-    "# Set up Kinesis Firehose Stream and EC2 Instance"
+    "# Provision AWS Resources to allow Kinesis Firehose to Stream Data to S3 Bucket"
    ]
   },
   {
@@ -125,7 +125,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8f1a15e8-0671-4a4d-ab1b-3c6a7adf639f",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# S3\n",
@@ -164,7 +168,6 @@
     "# EC2 Instances\n",
     "ec2_instance_image_id = \"ami-0cc00ed857256d2b4\"\n",
     "ec2_instance_type = \"t2.micro\"\n",
-    "ec2_instance_keypair_name = \"ec2-key-pair\"\n",
     "ec2_instance_tags_list = [{\"Key\": \"Name\", \"Value\": \"my-ec2-instance\"}]"
    ]
   },
@@ -415,212 +418,6 @@
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
     "ec2_instance_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}])\n",
     "ec2h.attach_sg_to_ec2_instance(sg_filter, ec2_instance_filter, 0, 0, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "235546a2-1def-458a-9537-61a783ed7e9c",
-   "metadata": {},
-   "source": [
-    "## Stop EC2 Instance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3428ccf5-e69d-42c8-9f27-f184ca1720e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "ec2_instance_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}])\n",
-    "# Filter instances group by tag\n",
-    "filtered_instances_list = ec2h.list_ec2_instances_by_filter(aws_region, ec2_instance_filter)\n",
-    "# Slice filtered instances by index, to get first matching instance_id\n",
-    "first_filtered_instance_id = filtered_instances_list[0][\"id\"]\n",
-    "stop_instance_response = ec2h.stop_instance(first_filtered_instance_id, aws_region)\n",
-    "stop_instance_response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cc033fd-6514-4eb6-beb5-9a5bbc44ae9d",
-   "metadata": {},
-   "source": [
-    "## Terminate EC2 Instance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daa3da0b-c026-4be5-b597-bcb370cb63f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "ec2_instance_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}])\n",
-    "# Filter instances group by tag\n",
-    "filtered_instances_list = ec2h.list_ec2_instances_by_filter(aws_region, ec2_instance_filter)\n",
-    "# Slice filtered instances by index, to get first matching instance_id\n",
-    "first_filtered_instance_id = filtered_instances_list[0][\"id\"]\n",
-    "terminated_instance_response = ec2h.terminate_instance(first_filtered_instance_id, aws_region)\n",
-    "terminated_instance_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8153290b-5f83-4b2a-bfad-d4d1364150a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ec2_instance_filter = dict(\n",
-    "    Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}]\n",
-    ")\n",
-    "ec2h.check_ec2_instance_termination(ec2_instance_filter, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0dc98b93-1dcc-41bb-8ed2-dd7bc41ffe98",
-   "metadata": {},
-   "source": [
-    "## Delete Local SSH Key Pair"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a83f871-cde4-48ff-b753-5f4a0ba4d950",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key_deletion_response = ssh_keys.delete_key_pair(keypair_name, aws_region)\n",
-    "key_deletion_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87f18efc-4d8a-4e6a-9bb1-786b632002a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ssh-key-pair\"]}])\n",
-    "ssh_keys.check_deletion_key_pair(key_filter, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed700f8d-b287-455e-9918-979e917ca1e2",
-   "metadata": {},
-   "source": [
-    "## Delete EC2 Security Groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97617da9-6acd-40a6-8c81-db233734b432",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
-    "sg_id_list = ec2h.get_security_group_ids(aws_region, sg_filter)\n",
-    "ec2h.delete_sg(sg_id_list[0], aws_region)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edfe8395-2de4-4a14-b0b7-6e7b866a1ca2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
-    "ec2h.check_ec2_security_group_deletion(sg_filter, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26dc5d12-1854-491b-841a-4b19a7f0c652",
-   "metadata": {},
-   "source": [
-    "## Delete the Kinesis Firehose Delivery Stream"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b61a5023-17d8-47a7-8f3c-b468c0322b02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "firehose_deletion_response = knsfire.delete_kinesis_firehose_stream(\n",
-    "    firehose_stream_name, aws_region\n",
-    ")\n",
-    "knsfire.check_kinesis_firehose_stream_seletion(firehose_stream_name, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62a0f22a-cd81-4618-af86-583ce64e0ee1",
-   "metadata": {},
-   "source": [
-    "## Delete IAM Role"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70e918a6-00ff-4449-9a75-709dbe50ddab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iam_role_deletion_response = iamr.delete_iam_role(iam_role_name, aws_region)\n",
-    "iamr.check_iam_role_deletion(iam_role_name, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fbec973-7265-4966-bfc2-c489223436d3",
-   "metadata": {},
-   "source": [
-    "## Delete CloudWatch Log Group and Stream"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdd98e4e-b389-48e3-ad43-e55b1e5a5a90",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "cwlogs.delete_cw_log_group_stream(cw_logs_group_name, firehose_stream_name, aws_region)\n",
-    "cwlogs.check_cw_log_group_deletion(cw_logs_group_name, aws_region)\n",
-    "cwlogs.check_cw_log_stream_deletion(cw_logs_group_name, firehose_stream_name, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbbf8af8-34e7-4863-be1a-3b95cbd93b7c",
-   "metadata": {},
-   "source": [
-    "## Delete the S3 Bucket"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db79efeb-e9e5-423d-8185-9ee79f95fb7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s3_bucket_deletion_response = s3b.delete_s3_bucket(s3_bucket_name, aws_region)\n",
-    "s3b.check_s3_bucket_deletion(s3_bucket_name, aws_region)"
    ]
   }
  ],
