added note about waiting for IAM role to be fully created

--- a/1_create_aws_resources.ipynb
+++ b/1_create_aws_resources.ipynb
@@ -30,6 +30,7 @@
     "import json\n",
     "import os\n",
     "from glob import glob\n",
+    "from time import sleep\n",
     "\n",
     "import boto3\n",
     "from dotenv import find_dotenv, load_dotenv"
@@ -249,6 +250,25 @@
     "    aws_region,\n",
     ")\n",
     "iam_role_creation_response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "437119a9-f0af-42c8-bc46-3a35634b6548",
+   "metadata": {},
+   "source": [
+    "**Note**\n",
+    "1. The creation of this IAM role must be completed before the role can be used. After running the command above to create the role, it will be necessary to wait for a few seconds before the newly created role can be assumed by Kinesis Firehose when it is created next. For this reason, we will now pause for a few seconds before proceeding to create the Kinesis Firehost delivery stream."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e9d14c3-5bc4-49b5-9282-34b9c75c94b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sleep(15)"
    ]
   },
   {
