added functionality to combine hourly raw tweets data and export to CSVs on S3

--- a/2_delete_aws_resources.ipynb
+++ b/2_delete_aws_resources.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "eac93db5-af70-4d6b-ac45-c3b863f6ca8a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Destroy AWS Resources"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95b093fb-a250-4bde-885d-5072d335bb7d",
    "metadata": {},
    "outputs": [],
@@ -22,13 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a5c0fec3-42d3-44f7-b241-de7e1458795b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from glob import glob\n",
+    "from time import sleep\n",
     "\n",
     "import boto3\n",
     "from dotenv import find_dotenv, load_dotenv"
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3039b307-b6b7-4ebe-a48d-e9e02b17c3b6",
    "metadata": {},
    "outputs": [],
@@ -65,17 +68,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7393dc0a-6058-4554-8257-64537279bbd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(find_dotenv())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6eb61385-6e3f-4f97-98df-caf4cd71f8a2",
    "metadata": {},
    "outputs": [],
@@ -125,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8f1a15e8-0671-4a4d-ab1b-3c6a7adf639f",
    "metadata": {
     "tags": [
@@ -135,10 +149,11 @@
    "outputs": [],
    "source": [
     "# S3\n",
-    "s3_bucket_name = \"testwillz3s\"\n",
+    "s3_bucket_name = \"sagemakertestwillz3s\"\n",
     "\n",
     "# IAM Role\n",
-    "iam_role_name = \"ec2-dummy-role\"\n",
+    "iam_role_name = \"kinesis-firehose-role\"\n",
+    "iam_policy_name = \"mypolicy\"\n",
     "\n",
     "# Kinesis Firehose Stream\n",
     "firehose_stream_name = \"twitter_delivery_stream\"\n",
@@ -163,17 +178,73 @@
    "id": "23fbbd9d-4db8-4a4c-8a62-f164b9f445bf",
    "metadata": {},
    "source": [
-    "## Reset EC2 Public IP Address in Ansible Inventory"
+    "## Reset Host Target EC2 Attributes in Ansible Inventory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0742cfdf-bb6a-4f93-990e-db470e035e2a",
+   "metadata": {},
+   "source": [
+    "Reset the target IP address"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d1556f8d-498c-48c9-a053-437801cd3ac2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Changed to use specified IP address.\n",
+      "ansible_host: ...\n",
+      "ansible_connection: ssh\n",
+      "ansible_user: ec2-user\n",
+      "ansible_python_interpreter: /usr/bin/python3\n",
+      "ansible_ssh_private_key_file: /tmp/aws_ec2_key.pem\n"
+     ]
+    }
+   ],
    "source": [
-    "pbu.replace_host_inventory_host_ip(ansible_inventory_filepath, \"...\")"
+    "%%time\n",
+    "pbu.replace_inventory_host_ip(ansible_inventory_host_vars_fpath, \"...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99eef21d-a356-4575-9ea9-9d4d35ac2eae",
+   "metadata": {},
+   "source": [
+    "Reset the target Python version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a4d69c9c-46ec-49a4-871b-55f20b188232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Changed to use Python 2.7.\n",
+      "ansible_host: ...\n",
+      "ansible_connection: ssh\n",
+      "ansible_user: ec2-user\n",
+      "ansible_python_interpreter: /usr/bin/python2.7\n",
+      "ansible_ssh_private_key_file: /tmp/aws_ec2_key.pem\n",
+      "CPU times: user 0 ns, sys: 1.33 ms, total: 1.33 ms\n",
+      "Wall time: 839 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "pbu.replace_inventory_python_version(ansible_inventory_host_vars_fpath, \"2.7\")"
    ]
   },
   {
@@ -228,11 +299,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8153290b-5f83-4b2a-bfad-d4d1364150a9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "ec2_instance_filter = dict(\n",
     "    Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}]\n",
     ")\n",
@@ -254,17 +326,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "key_deletion_response = ssh_keys.delete_key_pair(keypair_name, aws_region)\n",
     "key_deletion_response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "87f18efc-4d8a-4e6a-9bb1-786b632002a9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "key_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ssh-key-pair\"]}])\n",
     "ssh_keys.check_deletion_key_pair(key_filter, aws_region)"
    ]
@@ -279,11 +353,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "97617da9-6acd-40a6-8c81-db233734b432",
+   "execution_count": 15,
+   "id": "19fc63eb-b9cf-4254-98c8-ae32781834ad",
    "metadata": {},
    "outputs": [],
    "source": [
+    "sleep(45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "97617da9-6acd-40a6-8c81-db233734b432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted Security Group sg-08d9975f57751369f\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
     "sg_id_list = ec2h.get_security_group_ids(aws_region, sg_filter)\n",
     "ec2h.delete_sg(sg_id_list[0], aws_region)"
@@ -291,11 +384,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "edfe8395-2de4-4a14-b0b7-6e7b866a1ca2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
     "ec2h.check_ec2_security_group_deletion(sg_filter, aws_region)"
    ]
@@ -310,11 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b61a5023-17d8-47a7-8f3c-b468c0322b02",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "%%time\n",
     "firehose_deletion_response = knsfire.delete_kinesis_firehose_stream(\n",
     "    firehose_stream_name, aws_region\n",
     ")\n",
@@ -326,16 +423,85 @@
    "id": "62a0f22a-cd81-4618-af86-583ce64e0ee1",
    "metadata": {},
    "source": [
-    "## Delete IAM Role"
+    "## IAM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef6b1d4d-c7ef-4f24-88b6-40ea17829986",
+   "metadata": {},
+   "source": [
+    "### Delete IAM Firehose-S3 Policy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c1edf6-fc88-44c9-861c-ea83cd8f21bd",
+   "metadata": {},
+   "source": [
+    "Get Attached IAM Policies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b4571c8-4ece-4e5e-8ae5-d8a1436004f1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "iam_firehose_s3_policy_list = iamr.get_iam_policies(aws_region, attached=True)\n",
+    "iam_policy_dict = [\n",
+    "    iam_firehose_s3_policy\n",
+    "    for iam_firehose_s3_policy in iam_firehose_s3_policy_list\n",
+    "    if iam_firehose_s3_policy[\"PolicyName\"] == iam_policy_name\n",
+    "][0]\n",
+    "iam_policy_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f0e395-770b-4bb8-a5a9-3e14fde39eef",
+   "metadata": {},
+   "source": [
+    "Delete IAM Firehose-S3 Policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6a54db-5736-48f7-a2b0-3c21e4ec24d2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "policy_detachment_response, policy_deletion_response = iamr.delete_iam_policy(\n",
+    "    iam_policy_dict[\"Arn\"], iam_role_name, aws_region\n",
+    ")\n",
+    "print(policy_detachment_response)\n",
+    "print(policy_deletion_response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "553e70a8-fd65-4b06-8db4-ede2b595e444",
+   "metadata": {},
+   "source": [
+    "### Delete IAM Role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "70e918a6-00ff-4449-9a75-709dbe50ddab",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "iam_role_deletion_response = iamr.delete_iam_role(iam_role_name, aws_region)\n",
     "iamr.check_iam_role_deletion(iam_role_name, aws_region)"
    ]
@@ -350,12 +516,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "bdd98e4e-b389-48e3-ad43-e55b1e5a5a90",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 88.3 ms, sys: 4.67 ms, total: 93 ms\n",
+      "Wall time: 513 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "cwlogs.delete_cw_log_group_stream(cw_logs_group_name, firehose_stream_name, aws_region)\n",
@@ -373,11 +548,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "db79efeb-e9e5-423d-8185-9ee79f95fb7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucket sagemakertestwillz3s has been cleaned up\n",
+      "Bucket sagemakertestwillz3s has been deleted\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "s3_bucket_deletion_response = s3b.delete_s3_bucket(s3_bucket_name, aws_region)\n",
     "s3b.check_s3_bucket_deletion(s3_bucket_name, aws_region)"
    ]
