--- a/4_create_sagemaker_resources.ipynb
+++ b/4_create_sagemaker_resources.ipynb
@@ -375,7 +375,8 @@
    "source": [
     "%%time\n",
     "lc_script = render_lifecycle_config_create_script(\n",
-    "    pypackages_list=[\"scipy\"], env_vars=[\"AWS_ACCESS_KEY_ID\", \"AWS_SECRET_ACCESS_KEY\"]\n",
+    "    pypackages_list=[\"scipy\"],\n",
+    "    env_vars=[\"AWS_ACCESS_KEY_ID\", \"AWS_SECRET_ACCESS_KEY\", \"AWS_REGION\"],\n",
     ")\n",
     "# print(type(lc_script))\n",
     "# print(lc_script)\n",
@@ -492,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
