--- a/1_create_aws_resources.ipynb
+++ b/1_create_aws_resources.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95b093fb-a250-4bde-885d-5072d335bb7d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a5c0fec3-42d3-44f7-b241-de7e1458795b",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,7 @@
     "import os\n",
     "from glob import glob\n",
     "from time import sleep\n",
+    "from typing import Dict\n",
     "\n",
     "import boto3\n",
     "from dotenv import find_dotenv, load_dotenv"
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3039b307-b6b7-4ebe-a48d-e9e02b17c3b6",
    "metadata": {},
    "outputs": [],
@@ -67,17 +68,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7393dc0a-6058-4554-8257-64537279bbd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(find_dotenv())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6eb61385-6e3f-4f97-98df-caf4cd71f8a2",
    "metadata": {},
    "outputs": [],
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8f1a15e8-0671-4a4d-ab1b-3c6a7adf639f",
    "metadata": {
     "tags": [
@@ -137,12 +149,12 @@
    "outputs": [],
    "source": [
     "# S3\n",
-    "s3_bucket_name = \"testwillz3s\"\n",
+    "s3_bucket_name = \"sagemakertestwillz3s\"\n",
     "\n",
     "# IAM Role\n",
     "iam_role_path = \"/\"\n",
-    "iam_role_name = \"ec2-dummy-role\"\n",
-    "iam_role_description = \"BOTO3 ec2 dummy role\"\n",
+    "iam_role_name = \"kinesis-firehose-role\"\n",
+    "iam_role_description = \"IAM Role to be assumed by Kinesis Firehose\"\n",
     "iam_role_trust_policy = {\n",
     "    \"Version\": \"2012-10-17\",\n",
     "    \"Statement\": [\n",
@@ -154,9 +166,12 @@
     "        }\n",
     "    ],\n",
     "}\n",
+    "iam_firehose_s3_policy_name = \"mypolicy\"\n",
+    "iam_firehose_s3_policy_description = \"IAM Policy Granting Firehose Access to S3\"\n",
+    "iam_firehose_s3_policy_tags = [{\"Key\": \"Name\", \"Value\": \"firehose_access_s3\"}]\n",
     "\n",
     "# Kinesis Firehose Stream\n",
-    "stream_s3_destination_prefix = \"datasets/twitter/kinesis-demo/YYYY/MM/dd/HH\"\n",
+    "stream_s3_destination_prefix = \"datasets/twitter/kinesis-demo/\"\n",
     "firehose_stream_name = \"twitter_delivery_stream\"\n",
     "\n",
     "# CloudWatch Logging\n",
@@ -174,6 +189,54 @@
     "ec2_instance_type = \"t2.micro\"\n",
     "ec2_instance_tags_list = [{\"Key\": \"Name\", \"Value\": \"my-ec2-instance\"}]\n",
     "ansible_inventory_host_vars_fpath = \"inventories/production/host_vars/ec2host\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "317fd5ca-7d27-4e92-8bbb-d91a625c7ddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IAM role granting Kinesis Firehose access to S3\n",
+    "account_id = boto3.client(\"sts\").get_caller_identity().get(\"Account\")\n",
+    "iam_firehose_s3_policy_document = {\n",
+    "    \"Version\": \"2012-10-17\",\n",
+    "    \"Statement\": [\n",
+    "        {\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\n",
+    "                \"s3:AbortMultipartUpload\",\n",
+    "                \"s3:GetBucketLocation\",\n",
+    "                \"s3:GetObject\",\n",
+    "                \"s3:ListBucket\",\n",
+    "                \"s3:ListBucketMultipartUploads\",\n",
+    "                \"s3:PutObject\",\n",
+    "            ],\n",
+    "            \"Resource\": [\n",
+    "                f\"arn:aws:s3:::{s3_bucket_name}\",\n",
+    "                f\"arn:aws:s3:::{s3_bucket_name}/*\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\n",
+    "                \"kinesis:DescribeStream\",\n",
+    "                \"kinesis:GetShardIterator\",\n",
+    "                \"kinesis:GetRecords\",\n",
+    "                \"kinesis:ListShards\",\n",
+    "            ],\n",
+    "            \"Resource\": f\"arn:aws:kinesis:{aws_region}:{account_id}:stream/{firehose_stream_name}\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\"logs:PutLogEvents\"],\n",
+    "            \"Resource\": [\n",
+    "                f\"arn:aws:logs:{aws_region}:{account_id}:log-group:{cw_logs_group_name}:log-stream:{firehose_stream_name}\"\n",
+    "            ],\n",
+    "        },\n",
+    "    ],\n",
+    "}"
    ]
   },
   {
@@ -221,28 +284,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d08b4c1-2a1d-4ac2-8f69-8f6b6f441c54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cw_stream_creation_response"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a8da958f-cfd6-4d45-a03c-7bc3fb59a392",
    "metadata": {},
    "source": [
-    "## Create IAM Role"
+    "## IAM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b3ea9e-1ef5-48c4-931c-1a024bc9c00e",
+   "metadata": {},
+   "source": [
+    "### Create IAM Role to be Assumed by Firehose"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "729408d2-b5e2-4c04-9f4c-8a475c4873a4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -258,21 +321,117 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437119a9-f0af-42c8-bc46-3a35634b6548",
+   "id": "0b64154f-2e15-4b32-b3fe-da960f8a4971",
    "metadata": {},
    "source": [
-    "**Note**\n",
-    "1. The creation of this IAM role must be completed before the role can be used. After running the command above to create the role, it will be necessary to wait for a few seconds before the newly created role can be assumed by Kinesis Firehose when it is created next. For this reason, we will now pause for a few seconds before proceeding to create the Kinesis Firehost delivery stream."
+    "### Create IAM Firehose-S3 Policy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33fe6343-95f9-4c87-85f7-cd3476fd030c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "iam_policy_creation_response = iamr.create_iam_policy(\n",
+    "    aws_region,\n",
+    "    iam_firehose_s3_policy_name,\n",
+    "    iam_firehose_s3_policy_document,\n",
+    "    iam_firehose_s3_policy_description,\n",
+    "    iam_firehose_s3_policy_tags,\n",
+    ")\n",
+    "iam_policy_creation_response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "541a3b68-c909-42cd-b95c-017118e3cfef",
+   "metadata": {},
+   "source": [
+    "### Get IAM Firehose-S3 Policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6063da7d-ed28-4eb8-94c0-e382287497f1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 35.8 ms, sys: 0 ns, total: 35.8 ms\n",
+      "Wall time: 209 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['mypolicy', '2021-12-27 02:25:07']]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "iam_firehose_s3_policy_list = iamr.get_iam_policies(aws_region, attached=False)\n",
+    "[\n",
+    "    [\n",
+    "        iam_firehose_s3_policy[\"PolicyName\"],\n",
+    "        iam_firehose_s3_policy[\"CreateDate\"].strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+    "    ]\n",
+    "    for iam_firehose_s3_policy in iam_firehose_s3_policy_list\n",
+    "    if iam_firehose_s3_policy_name in iam_firehose_s3_policy[\"PolicyName\"]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4772da04-359b-4b3d-bb11-4acc3b340c98",
+   "metadata": {},
+   "source": [
+    "### Attach IAM Firehose-S3 Policy to IAM Role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c4c660-a4b1-434e-ba70-5044f12b9739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "policy_attachment_response = iamr.attach_iam_policy_to_role(\n",
+    "    iam_role_name, aws_region, iam_firehose_s3_policy_list[0][\"Arn\"]\n",
+    ")\n",
+    "policy_attachment_response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22979b55-8769-4e0c-a0a2-65af6dccfdc1",
+   "metadata": {},
+   "source": [
+    "**Note**\n",
+    "1. The creation of this IAM role must be completed before the role can be used. After running the command above to create the role, it will be necessary to wait for a few seconds before the newly created role can be assumed by Kinesis Firehose when it is created next. For this reason, we will now pause before proceeding to create the Kinesis Firehost delivery stream."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "3e9d14c3-5bc4-49b5-9282-34b9c75c94b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sleep(15)"
+    "sleep(30)"
    ]
   },
   {
@@ -293,13 +452,15 @@
     "%%time\n",
     "kinesis_firehose_stream_creation_response = knsfire.create_kinesis_firehose_stream(\n",
     "    firehose_stream_name,\n",
-    "    iam_role_creation_response['Role'][\"Arn\"],\n",
+    "    iam_role_creation_response[\"Role\"][\"Arn\"],\n",
     "    s3_bucket_name,\n",
     "    stream_s3_destination_prefix,\n",
     "    cw_logs_group_name,\n",
     "    iam_role_name,\n",
     "    iam_role_path,\n",
     "    aws_region,\n",
+    "    5,\n",
+    "    60,\n",
     ")\n",
     "kinesis_firehose_stream_creation_response"
    ]
@@ -308,7 +469,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ef2ddff3-dc3c-4f42-96a6-5d5934c37f1e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "knsfire.describe_kinesis_firehose_stream(firehose_stream_name, aws_region)"
@@ -389,10 +552,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "715f74ea-9b6c-4efb-bfe4-d5ad89b7780c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/tmp/aws_ec2_key.pem']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "glob(f\"/tmp/{key_fname}*.pem\")"
    ]
@@ -441,7 +615,7 @@
     "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
     "ec2_instance_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}])\n",
-    "ec2h.attach_sg_to_ec2_instance(sg_filter, ec2_instance_filter, 0, 0, aws_region)"
+    "ec2h.attach_sg_to_ec2_instance(sg_filter, ec2_instance_filter, 0, -1, aws_region)"
    ]
   },
   {
@@ -453,13 +627,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b46b18ab-18dd-47bf-b7cd-49b20ebfa7d9",
+   "metadata": {},
+   "source": [
+    "Get attributes of the newly created EC2 instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c40cf9f2-dcb6-455e-b38f-256d4225b130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "ec2_instance_filter = dict(\n",
+    "    Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}]\n",
+    ")\n",
+    "ec2_instances_list = ec2h.list_ec2_instances_by_filter(aws_region, ec2_instance_filter)\n",
+    "ec2_instances_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "498e3898-8a3e-4154-ba98-0a17d45456d7",
+   "metadata": {},
+   "source": [
+    "This has to be done since, on initial provisioning of the EC2 host (step 2.), the only version of Python installed on the instance is Python 2.7. After Python 3 is installed in step 2., we need to notify Ansible to use Python 3 instead. This is done in this step."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "40029233-3012-4046-b967-cbf68f71ef5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbu.replace_host_inventory_host_ip(ansible_inventory_filepath, ec2_public_ip_address)"
+    "pbu.replace_inventory_host_ip(\n",
+    "    ansible_inventory_host_vars_fpath,\n",
+    "    ec2_instances_list[-1][\"public_dns_name\"],\n",
+    ")"
    ]
   }
  ],
