updated sagemaker provisioning nb

--- a/2_create_sagemaker_resources.ipynb
+++ b/2_create_sagemaker_resources.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1ea0847-7f09-4f4d-a79d-f34d8d79c774",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c53c6322-1d94-4366-9934-1dbe41db6c7a",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8e1a8fbf-b8fa-4fb0-b7a2-6f5986a40fb7",
    "metadata": {},
    "outputs": [],
@@ -54,17 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0011e922-0926-43ce-8566-6d2438059035",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(find_dotenv())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e159d102-0d2b-4066-826d-d6077a411841",
    "metadata": {},
    "outputs": [],
@@ -89,10 +100,10 @@
    },
    "source": [
     "In this notebook, the following resources related to AWS SageMaker will be created\n",
-    "- S3 bucket\n",
+    "- (optional) S3 bucket\n",
+    "- IAM role granting SageMaker full access to a single S3 bucket\n",
     "- EC2 Security group for the SageMaker instance\n",
     "- CloudWatch Logging group for the SageMaker instance\n",
-    "- SageMaker notebook lifecycle configuration\n",
     "- SageMaker notebook instance\n",
     "\n",
     "### Pre-Requisites\n",
@@ -117,24 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "31c8b84f-5b35-4c49-b6c5-135556a35b8c",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# S3\n",
-    "s3_bucket_name = \"sagemakerdemoedesz4321\"\n",
+    "s3_bucket_name = \"\"\n",
     "\n",
     "# IAM Role\n",
-    "iam_role_name = \"AmazonSageMaker-ExecutionRole-20211222T235985\"\n",
-    "# iam_role_path = \"/\"\n",
-    "# iam_role_description = \"Sagemaker S3 permissions role\"\n",
-    "# iam_role_trust_policy = ...\n",
+    "iam_role_name = \"AmazonSageMaker-ExecutionRole-20211228T122046\"\n",
     "\n",
     "# EC2 Security Groups\n",
-    "sg_group_tags = [{\"Key\": \"Name\", \"Value\": sg_group_name}]\n",
     "sg_group_name = \"mysgname\"\n",
     "sg_group_desc = \"My security group\"\n",
+    "sg_group_tags = [{\"Key\": \"Name\", \"Value\": sg_group_name}]\n",
     "\n",
     "# Sagemaker Lifecycle\n",
     "nb_lifecycle_name = \"mynbconfig\"\n",
@@ -159,19 +171,36 @@
    "id": "4c7c8d20-ce81-4a05-90d5-eba37c39ac95",
    "metadata": {},
    "source": [
-    "## Create the S3 Bucket"
+    "## (Optional) Create the S3 Bucket"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6446dc3-d773-411f-9ba4-9326a89f00af",
+   "metadata": {},
+   "source": [
+    "If a name was provided for the S3 bucket, then create it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "30f6bb62-01bd-45fc-8b50-2d52a367915c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5 µs, sys: 1 µs, total: 6 µs\n",
+      "Wall time: 9.54 µs\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "s3_bucket_creation_response = s3b.create_s3_bucket(s3_bucket_name, aws_region)\n",
-    "s3_bucket_creation_response"
+    "if s3_bucket_name:\n",
+    "    s3_bucket_creation_response = s3b.create_s3_bucket(s3_bucket_name, aws_region)"
    ]
   },
   {
@@ -189,7 +218,7 @@
    "source": [
     "Currently, an IAM role granting Sagemaker appropriate S3 access must be created from the AWS console.\n",
     "\n",
-    "To do this, [start](https://docs.aws.amazon.com/sagemaker/latest/dg/howitworks-create-ws.html) the process of creating of a Sagemaker instance through the console and an IAM role should be created manually following instructions [here](https://docs.aws.amazon.com/glue/latest/dg/create-an-iam-role-sagemaker-notebook.html). After the IAM role is created, the Sagemaker instance creation process can be canceled as the instance will be programmatically created later in this notebook."
+    "To do this, [start](https://docs.aws.amazon.com/sagemaker/latest/dg/howitworks-create-ws.html) the process of creating of a Sagemaker instance through the console and an IAM role should be created manually following instructions [here](https://docs.aws.amazon.com/glue/latest/dg/create-an-iam-role-sagemaker-notebook.html). This role should only be given access to **one pre-existing S3 bucket**, whose name contains the word *sagemaker*, and **not to all S3 buckets**. After the IAM role is created, the Sagemaker instance creation process can be canceled as the instance will be programmatically created later in this notebook."
    ]
   },
   {
@@ -230,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "caa48c16-5941-43fc-89c4-2c167a0e545d",
    "metadata": {},
    "outputs": [],
@@ -241,7 +270,7 @@
     "    subnet_ids = [\n",
     "        {\n",
     "            \"id\": sn[\"SubnetId\"],\n",
-    "            \"availability_zone\": sn['AvailabilityZone'],\n",
+    "            \"availability_zone\": sn[\"AvailabilityZone\"],\n",
     "            \"state\": sn[\"State\"],\n",
     "        }\n",
     "        for sn in subnet_list[\"Subnets\"]\n",
@@ -259,8 +288,9 @@
     "%%time\n",
     "vpcs_list = ec2h.list_vpcs(aws_region)\n",
     "vpc_id = vpcs_list[0][\"VpcId\"]\n",
-    "subbet_filters = dict(Filters=[{\"Name\":\"vpc-id\", \"Values\":[vpc_id]}])\n",
-    "subnet_ids = get_subnet_ids(aws_region: str, filters)"
+    "subnet_filters = dict(Filters=[{\"Name\":\"vpc-id\", \"Values\":[vpc_id]}])\n",
+    "subnet_ids = get_subnet_ids(aws_region, subnet_filters)\n",
+    "print(subnet_ids, vpc_id)"
    ]
   },
   {
@@ -301,93 +331,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "414b7b67-6e17-41b6-86c4-cffdb8713207",
-   "metadata": {},
-   "source": [
-    "### Create Lifecycle Config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1950d34d-2882-4b96-8994-306ad4395b90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_tag(env_vars: List[str], env_var_names: List[str]) -> List[str]:\n",
-    "    overall = \"\\n\"\n",
-    "    for env_var in env_vars:\n",
-    "        export_cmd_str = (\n",
-    "            f'echo \"export ${env_var}=$TAG\" >> /etc/profile.d/jupyter-env.sh'\n",
-    "        )\n",
-    "        a = (\n",
-    "            f\"TAG=$(aws sagemaker list-tags --resource-arn $NOTEBOOK_ARN  | \"\n",
-    "            f\"\"\"jq -r --arg {env_var} \"${env_var}\" .'Tags[] | select(.Key == ${env_var}).Value'\"\"\"\n",
-    "            f\" --raw-output)\\n{export_cmd_str}\\n\\n\"\n",
-    "        )\n",
-    "        overall += a\n",
-    "    # print(overall)\n",
-    "\n",
-    "    abc = \"# PARAMETERS\\n\"\n",
-    "    for envv, envvn in zip(env_vars, env_var_names):\n",
-    "        abc += f\"{envv}={envvn}\\n\"\n",
-    "    # print(abc)\n",
-    "    return [abc.strip(), overall.strip()]\n",
-    "\n",
-    "\n",
-    "def render_lifecycle_config_create_script(\n",
-    "    pypackages_list: List[str],\n",
-    "    env_vars: List[str],\n",
-    ") -> str:\n",
-    "    pypackages_str = \" \".join(pypackages_list)\n",
-    "    vars_defns, tags_set_str = get_tag(\n",
-    "        env_vars, [os.getenv(ev_name) for ev_name in env_var_names]\n",
-    "    )\n",
-    "    arn_str = (\n",
-    "        \"NOTEBOOK_ARN=$(jq '.ResourceArn' /opt/ml/metadata/resource-metadata.json --raw-output)\\n\"\n",
-    "        f\"touch /etc/profile.d/jupyter-env.sh\\n\\n{tags_set_str}\\n\\ninitctl restart \"\n",
-    "        \"jupyter-server --no-wait\"\n",
-    "    )\n",
-    "    script = f\"\"\"#!/bin/bash\\n\\nset -e\\n\\n{vars_defns}\\n\\n{arn_str}\n",
-    "    \"\"\"\n",
-    "    b64_encoded = base64.b64encode(script.encode())\n",
-    "    return b64_encoded.decode(\"ascii\")\n",
-    "    # return script\n",
-    "\n",
-    "\n",
-    "def create_sagemaker_nb_lifecycle_config(\n",
-    "    nb_lifecycle_name: str, aws_region: str, on_create_script: str\n",
-    ") -> None:\n",
-    "    client = boto3.client(\"sagemaker\", region_name=aws_region)\n",
-    "    life_cycle_creation_response = client.create_notebook_instance_lifecycle_config(\n",
-    "        NotebookInstanceLifecycleConfigName=nb_lifecycle_name,\n",
-    "        OnCreate=[{\"Content\": on_create_script}],\n",
-    "    )\n",
-    "    return life_cycle_creation_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ee8f086-78f2-41f1-8c58-8b81f496c650",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "lc_script = render_lifecycle_config_create_script(\n",
-    "    pypackages_list=[\"scipy\"],\n",
-    "    env_vars=[\"AWS_ACCESS_KEY_ID\", \"AWS_SECRET_ACCESS_KEY\", \"AWS_REGION\"],\n",
-    ")\n",
-    "# print(type(lc_script))\n",
-    "# print(lc_script)\n",
-    "life_cycle_creation_response = create_sagemaker_nb_lifecycle_config(\n",
-    "    nb_lifecycle_name, aws_region, lc_script\n",
-    ")\n",
-    "life_cycle_creation_response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "44cea9b7-bb5c-47e6-8599-92e184f89582",
    "metadata": {},
    "source": [
@@ -404,10 +347,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "aad0f506-eb55-49c6-b86d-79586fe5b881",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 10.3 ms, sys: 308 µs, total: 10.6 ms\n",
+      "Wall time: 212 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [sg_group_name]}])\n",
@@ -425,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ac2f0c62-a1d0-4a28-90dd-3b3828962331",
    "metadata": {},
    "outputs": [],
@@ -435,33 +387,34 @@
     "    nb_instance_type: str,\n",
     "    sg_group_id: str,\n",
     "    subnet_id: str,\n",
-    "    nb_lifecycle_name: str,\n",
     "    iam_role_arn: str,\n",
     "    aws_region: str,\n",
     "    nb_instance_tags: List[str],\n",
+    "    platform_identifier: str = \"notebook-al2-v1\",\n",
     "):\n",
     "    client = boto3.client(\"sagemaker\", region_name=aws_region)\n",
     "    sgm_creation_response = client.create_notebook_instance(\n",
     "        NotebookInstanceName=nb_instance_name,\n",
     "        InstanceType=nb_instance_type,\n",
     "        SubnetId=subnet_id,\n",
-    "        SecurityGroupIds=[sg_group_id],    \n",
+    "        SecurityGroupIds=[sg_group_id],\n",
     "        RoleArn=iam_role_arn,\n",
     "        Tags=nb_instance_tags,\n",
-    "        LifecycleConfigName=nb_lifecycle_name,\n",
-    "        DirectInternetAccess='Enabled',\n",
+    "        DirectInternetAccess=\"Enabled\",\n",
     "        VolumeSizeInGB=20,\n",
-    "        PlatformIdentifier=\"notebook-al2-v1\",\n",
-    "        RootAccess='Enabled',\n",
+    "        PlatformIdentifier=platform_identifier,\n",
+    "        RootAccess=\"Enabled\",\n",
     "    )\n",
-    "    return sg_nb_creation_response"
+    "    return sgm_creation_response"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9bb40e3e-d047-4ef8-b8b2-f0ef0941d8be",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -473,7 +426,9 @@
     "    role_response[\"Role\"][\"Arn\"],\n",
     "    aws_region,\n",
     "    nb_instance_tags,\n",
-    ")"
+    "    \"notebook-al1-v1\",\n",
+    ")\n",
+    "sg_nb_creation_response"
    ]
   }
  ],
