--- a/3_combine_raw_data.ipynb
+++ b/3_combine_raw_data.ipynb
@@ -294,7 +294,7 @@
     "                ).get(\"CommonPrefixes\"):\n",
     "                    # Save tweets data and file metadata to\n",
     "                    # <bucket-name>/datasets/twitter/kinesis-demo/csvs/tweets_*.csv and\n",
-    "                    # csvs/tweets_metadata_*.csv\n",
+    "                    # csvs/tweets_metadata_*.csv respectively\n",
     "                    cdh.save_data_and_metadata_to_s3_csv(\n",
     "                        content_day.get(\"Prefix\"),\n",
     "                        existing_csv_files_list,\n",
