--- a/4_delete_sagemaker_resources.ipynb
+++ b/4_delete_sagemaker_resources.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1ea0847-7f09-4f4d-a79d-f34d8d79c774",
    "metadata": {},
    "outputs": [],
@@ -22,13 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c53c6322-1d94-4366-9934-1dbe41db6c7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import base64\n",
     "import os\n",
+    "from time import sleep\n",
     "from typing import Dict, List\n",
     "\n",
     "import boto3\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8e1a8fbf-b8fa-4fb0-b7a2-6f5986a40fb7",
    "metadata": {},
    "outputs": [],
@@ -54,17 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0011e922-0926-43ce-8566-6d2438059035",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(find_dotenv())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e159d102-0d2b-4066-826d-d6077a411841",
    "metadata": {},
    "outputs": [],
@@ -117,16 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "31c8b84f-5b35-4c49-b6c5-135556a35b8c",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# S3\n",
-    "s3_bucket_name = \"sagemakerdemoedesz4321\"\n",
+    "s3_bucket_name = \"\"\n",
     "\n",
-    "# IAM Role\n",
-    "iam_role_name = \"AmazonSageMaker-ExecutionRole-20211222T235985\"\n",
+    "# IAM\n",
+    "iam_role_name = \"AmazonSageMaker-ExecutionRole-20211228T122046\"\n",
+    "iam_policy_name = \"AmazonSageMaker-ExecutionPolicy-20211228T122046\"\n",
     "\n",
     "# EC2 Security Groups\n",
     "sg_group_name = \"mysgname\"\n",
@@ -158,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c0cf461a-b6ac-47d2-8b73-3dbe0265f5d0",
    "metadata": {
     "tags": []
@@ -167,7 +184,9 @@
    "source": [
     "def stop_sagemaker_nb_instance(nb_instance_name: str, aws_region: str) -> None:\n",
     "    client = boto3.client(\"sagemaker\", region_name=aws_region)\n",
-    "    stop_nb_response = client.stop_notebook_instance(NotebookInstanceName=nb_instance_name)\n",
+    "    stop_nb_response = client.stop_notebook_instance(\n",
+    "        NotebookInstanceName=nb_instance_name\n",
+    "    )\n",
     "    return stop_nb_response"
    ]
   },
@@ -184,6 +203,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1aab84d3-77bd-4f32-ba50-6122bbf89f54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sleep(90)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "73d8d66a-e2f5-4543-b1c2-8b2fea8235bb",
    "metadata": {},
@@ -193,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e61946e3-beb0-4f53-9887-37c315a23006",
    "metadata": {},
    "outputs": [],
@@ -204,7 +233,9 @@
     "    nb_dict = response_nb_list[\"NotebookInstances\"][0]\n",
     "    nb_state = nb_dict[\"NotebookInstanceStatus\"]\n",
     "    if nb_state not in [\"Stopped\"]:\n",
-    "        print(f\"Sagemaker Instance in state {nb_state}. Could not be deleted. Did nothing.\")\n",
+    "        print(\n",
+    "            f\"Sagemaker Instance in state {nb_state}. Could not be deleted. Did nothing.\"\n",
+    "        )\n",
     "    else:\n",
     "        nb_delete_response = client.delete_notebook_instance(\n",
     "            NotebookInstanceName=nb_instance_name\n",
@@ -214,54 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c8483b62-7898-459c-a928-22fac8cc094e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sagemaker Instance Deleted.\n",
+      "CPU times: user 20.6 ms, sys: 3.63 ms, total: 24.3 ms\n",
+      "Wall time: 236 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "delete_sagemaker_nb_instance(nb_instance_name, aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1c4ea06-0603-4b37-bfc8-f653f52f187c",
-   "metadata": {},
-   "source": [
-    "### Delete Lifecycle Config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d385be54-9621-4341-9e64-442a06cc1e1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def delete_sagemaker_nb_instance_lifecycle_config(nb_lifecycle_name: str, aws_region: str) -> None:\n",
-    "    client = boto3.client(\"sagemaker\", region_name=aws_region)\n",
-    "    nb_lifecycle_list = client.list_notebook_instance_lifecycle_configs(\n",
-    "        NameContains=nb_lifecycle_name\n",
-    "    )\n",
-    "    if nb_lifecycle_list[\"NotebookInstanceLifecycleConfigs\"]:\n",
-    "        nb_lifecycle_config_name = nb_lifecycle_list[\"NotebookInstanceLifecycleConfigName\"]\n",
-    "        nb_config_delete_response = client.delete_notebook_instance_lifecycle_config(\n",
-    "            NotebookInstanceLifecycleConfigName=nb_lifecycle_name\n",
-    "        )\n",
-    "        print(f\"Deleted lifecycle config: {nb_lifecycle_config_name}\")\n",
-    "    else:\n",
-    "        print(\"Did not find any lifecycle configurations. Did nothing.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "180cddf4-b3a8-43ec-b245-e9bf8c84c246",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "delete_sagemaker_nb_instance_lifecycle_config(nb_lifecycle_name, aws_region)"
    ]
   },
   {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "24a5fd65-ddc8-4d57-8c5c-bfbe0c93afb7",
    "metadata": {},
    "outputs": [],
@@ -289,10 +289,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6f45f6f1-a0f4-4818-935d-04e9410b8da6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 13.8 ms, sys: 0 ns, total: 13.8 ms\n",
+      "Wall time: 170 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "delete_cw_log_group_stream(cw_log_group_name, aws_region)"
@@ -308,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "75581322-0b83-40cf-9ccd-6bfc40af637d",
    "metadata": {},
    "outputs": [],
@@ -318,7 +327,8 @@
     ") -> None:\n",
     "    client = boto3.client(\"sagemaker\", region_name=aws_region)\n",
     "    response_nb_list = client.list_notebook_instances(NameContains=nb_instance_name)\n",
-    "    if not response_nb_list[\"NotebookInstanceLifecycleConfigs\"]:\n",
+    "    # if not response_nb_list[\"NotebookInstanceLifecycleConfigs\"]:\n",
+    "    if not response_nb_list:\n",
     "        print(\n",
     "            \"Found Notebook instance that depends on \"\n",
     "            f\"Security Group: {sg_group_id}. Did nothing.\"\n",
@@ -336,8 +346,164 @@
    "source": [
     "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [sg_group_name]}])\n",
-    "sg_id_list = get_security_group_ids(aws_region, sg_filter)\n",
+    "sg_id_list = ec2h.get_security_group_ids(aws_region, sg_filter)\n",
     "delete_sagemaker_nb_instance_security_group(nb_instance_name, aws_region, sg_id_list[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f53513c-719d-4d8e-8376-005d4ddd783e",
+   "metadata": {},
+   "source": [
+    "## IAM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de132331-e605-4988-a679-df59b9077278",
+   "metadata": {},
+   "source": [
+    "### Delete IAM Sagemaker-S3 Policy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c6067bf-ec22-47f1-b1c0-7c48fae9cafc",
+   "metadata": {},
+   "source": [
+    "Get Attached IAM Policies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd36745-1a0b-4a19-8587-96c59540c3cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iam_sagemaker_s3_policy_list = iamr.get_iam_policies(aws_region, attached=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f341aeef-30b0-4e2d-96c9-c5adb67b2cb0",
+   "metadata": {},
+   "source": [
+    "Filter list of policies to get user-defined S3 access IAM policy used by SageMaker IAM role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e89e1d7c-a193-4568-b4a7-40f36ef6b4ad",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "iam_policy_list = [\n",
+    "    iam_sagemaker_s3_policy\n",
+    "    for iam_sagemaker_s3_policy in iam_sagemaker_s3_policy_list\n",
+    "    if iam_sagemaker_s3_policy[\"PolicyName\"] == iam_policy_name\n",
+    "]\n",
+    "iam_policy_dict = iam_policy_list[0]\n",
+    "print(iam_policy_list)\n",
+    "print(iam_policy_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0281fa8d-415f-47f5-9340-9f2b6f35ac5b",
+   "metadata": {},
+   "source": [
+    "Detach IAM Sagemaker-S3 Policy from the SageMaker IAM role and Delete the policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766022a2-e3eb-4887-a722-207f4fdc10c4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "policy_detachment_response, policy_deletion_response = iamr.delete_iam_policy(\n",
+    "    iam_policy_dict[\"Arn\"], iam_role_name, aws_region\n",
+    ")\n",
+    "print(policy_detachment_response)\n",
+    "print(policy_deletion_response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4925af7b-4c73-4caf-abf1-bff0f648f84c",
+   "metadata": {},
+   "source": [
+    "Detach the AWS-provided policy `AmazonSageMakerFullAccess` from the SageMaker IAM role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4bd2c05-7fb6-4ede-825c-8d4781428126",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "iam_policy_list = [\n",
+    "    iam_sagemaker_s3_policy\n",
+    "    for iam_sagemaker_s3_policy in iam_sagemaker_s3_policy_list\n",
+    "    if iam_sagemaker_s3_policy[\"PolicyName\"] == \"AmazonSageMakerFullAccess\"\n",
+    "]\n",
+    "iam_policy_dict = iam_policy_list[0]\n",
+    "policy_detachment_response, policy_deletion_response = iamr.delete_iam_policy(\n",
+    "    iam_policy_dict[\"Arn\"], iam_role_name, aws_region, delete=False\n",
+    ")\n",
+    "print(policy_detachment_response)\n",
+    "print(policy_deletion_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d5d47eb6-f7e9-4336-97eb-a8a91b9335e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sleep(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b138779-9288-4cf7-8ef1-f82b5724109c",
+   "metadata": {},
+   "source": [
+    "### Delete IAM Role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ed2c49c5-692f-40e4-b50c-0466154f01f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 67.1 ms, sys: 4 µs, total: 67.1 ms\n",
+      "Wall time: 424 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "iam_role_deletion_response = iamr.delete_iam_role(iam_role_name, aws_region)\n",
+    "iamr.check_iam_role_deletion(iam_role_name, aws_region)"
    ]
   },
   {
@@ -345,18 +511,36 @@
    "id": "432592a6-9f4a-4099-abea-a0e88dfbeecb",
    "metadata": {},
    "source": [
-    "## Delete the S3 Bucket"
+    "## (Optional) Delete the S3 Bucket"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d0ae868-63e5-433e-aa53-bc8255d21a5e",
+   "metadata": {},
+   "source": [
+    "If a name was provided for the S3 bucket, then delete it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "31a09ebb-99fa-427b-901a-c3fa58447baa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 3.1 µs\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "s3b.delete_s3_bucket(s3_bucket_name, aws_region)"
+    "if s3_bucket_name:\n",
+    "    s3b.delete_s3_bucket(s3_bucket_name, aws_region)"
    ]
   }
  ],
@@ -376,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
